--- a/files/css/style.css
+++ b/files/css/style.css
@@ -15,18 +15,15 @@ body{
     /* makes sure it stays on top */
   }
   #status {
-    width: 200px;
-    height: 200px;
-    position: absolute;
-    left: 50%;
-    /* centers the loading animation horizontally one the screen */
-    top: 50%;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(102, 206, 255, 1);
+
     /* centers the loading animation vertically one the screen */
-    background-image: url(https://raw.githubusercontent.com/niklausgerber/PreLoadMe/master/img/status.gif);
+    background-image: url(http://66.media.tumblr.com/bdaea39db57dc0b48d763262514268db/tumblr_mgj44mNyST1s199fdo1_500.gif);
     /* path to your loading animation */
     background-repeat: no-repeat;
     background-position: center;
-    margin: -100px 0 0 -100px;
     /* is width and height divided by two */
   }
 h1{
