--- a/files/css/style.css
+++ b/files/css/style.css
@@ -20,7 +20,7 @@ body{
     background-color: rgba(102, 206, 255, 1);
 
     /* centers the loading animation vertically one the screen */
-    background-image: url(http://66.media.tumblr.com/bdaea39db57dc0b48d763262514268db/tumblr_mgj44mNyST1s199fdo1_500.gif);
+    background-image: url("../images/loading/catload.gif");
     /* path to your loading animation */
     background-repeat: no-repeat;
     background-position: center;
