--- a/files/css/style.css
+++ b/files/css/style.css
@@ -1,7 +1,53 @@
 body{
-    font-family: sans-serif;
+
+	font-family: sans-serif;
     overflow: hidden;
-} 
+	color: #fff;
+	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+	background-size: 400% 400%;
+	-webkit-animation: Gradient 15s ease infinite;
+	-moz-animation: Gradient 15s ease infinite;
+	animation: Gradient 15s ease infinite;
+}
+
+@-webkit-keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@-moz-keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+
+
 
   /* Preloader */ 
 #preloader {
@@ -40,11 +86,11 @@ h1{
     border-radius: 30px;
     width: 350px;
     height: 200px;
-    padding: 20px;
-    filter: grayscale(85%) opacity(80%);
-    transition: .75s;
+    padding: 10px;
+    
+    transition: .65s;
 }
 .gallery img:hover{
     filter: grayscale(0%);
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
