--- a/files/css/style.css
+++ b/files/css/style.css
@@ -223,7 +223,7 @@ body{
 h1{
     text-align: center;
     font-size: 80px;
-    color: forestgreen;
+    color: rgb(235, 235, 235);
     margin: 30px;
 }
 .gallery{
@@ -239,6 +239,5 @@ h1{
     transition: .65s;
 }
 .gallery img:hover{
-    filter: grayscale(0%);
-    transform: scale(1.05);
+    transform: scale(1.04);
 }
