--- a/files/css/style.css
+++ b/files/css/style.css
@@ -1,6 +1,6 @@
 body{
 
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Source Sans Pro';
     overflow: hidden;
 	color: #fff;
 	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
